# fried.communication

./: .gitignore  CMakeLists.txt
headers/: connection_interface.h  fried.communication.h  fried_communication.h  parser_interface.h  tcp_client_win.h  tcp_server.h  tcp_server_win.h
src/: connection_interface.cpp  fried.communication.cpp  fried_communication.cpp  parser_interface.cpp  tcp_client_win.cpp  tcp_server_win.cpp
test.app/: CMakeLists.txt  main.cpp
